[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainWindow.gd" type="Script" id=1]
[ext_resource path="res://images/trans.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 48
corner_radius_bottom_left = 48
corner_detail = 1

[sub_resource type="Theme" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FlagR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "speen"
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("FlagR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667, 0.183333, 0.2, 0.216667, 0.233333, 0.25, 0.266667, 0.283333, 0.3, 0.316667, 0.333333, 0.35, 0.366667, 0.383333, 0.4, 0.416667, 0.433333, 0.45, 0.466667, 0.483333, 0.5, 0.516667, 0.533333, 0.55, 0.566667, 0.583333, 0.6, 0.616667, 0.633333, 0.65, 0.666667, 0.683333, 0.7, 0.716667, 0.733333, 0.75, 0.766667, 0.783333, 0.8, 0.816667, 0.833333, 0.85, 0.866667, 0.883333, 0.9, 0.916667, 0.933333, 0.95, 0.966667, 0.983333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlagL:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667, 0.183333, 0.2, 0.216667, 0.233333, 0.25, 0.266667, 0.283333, 0.3, 0.316667, 0.333333, 0.35, 0.366667, 0.383333, 0.4, 0.416667, 0.433333, 0.45, 0.466667, 0.483333, 0.5, 0.516667, 0.533333, 0.55, 0.566667, 0.583333, 0.6, 0.616667, 0.633333, 0.65, 0.666667, 0.683333, 0.7, 0.716667, 0.733333, 0.75, 0.766667, 0.783333, 0.8, 0.816667, 0.833333, 0.85, 0.866667, 0.883333, 0.9, 0.916667, 0.933333, 0.95, 0.966667, 0.983333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[node name="TANG_Scene" type="Node2D"]

[node name="MainWindow" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="MainWindow"]
margin_right = 512.0
margin_bottom = 400.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="MainWindow"]
margin_left = 32.0
margin_top = 88.0
margin_right = 72.0
margin_bottom = 102.0
text = "Title"

[node name="Label7" type="Label" parent="MainWindow"]
margin_left = 16.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 64.0
custom_constants/line_spacing = 0
custom_styles/normal = SubResource( 1 )
text = "
Twitter Anniversary Notif Generator (TANG)
A horrific contraption by Ashley Campbell"
align = 1
clip_text = true

[node name="Label8" type="Label" parent="MainWindow"]
margin_left = 248.0
margin_top = 216.0
margin_right = 488.0
margin_bottom = 296.0
custom_constants/line_spacing = 0
custom_styles/normal = SubResource( 2 )
text = "     I am not responsible for
        any obscene tweets created
                with this abomination."
valign = 1
clip_text = true

[node name="Label3" type="Label" parent="MainWindow"]
margin_left = 296.0
margin_top = 152.0
margin_right = 484.0
margin_bottom = 166.0
text = "Tweet Text"
align = 2

[node name="Label4" type="Label" parent="MainWindow"]
margin_left = 32.0
margin_top = 152.0
margin_right = 220.0
margin_bottom = 166.0
text = "Notification Message"

[node name="Label5" type="Label" parent="MainWindow"]
margin_left = 32.0
margin_top = 216.0
margin_right = 220.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 64, 7 )
text = "Button Label"

[node name="Label6" type="Label" parent="MainWindow"]
margin_left = 32.0
margin_top = 296.0
margin_right = 220.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 64, 7 )
text = "Generated Link"

[node name="Label2" type="Label" parent="MainWindow"]
margin_left = 320.0
margin_top = 88.0
margin_right = 497.0
margin_bottom = 102.0
text = "Image Link (twimg ONLY)"

[node name="e_title" type="LineEdit" parent="MainWindow"]
margin_left = 24.0
margin_top = 104.0
margin_right = 224.0
margin_bottom = 128.0

[node name="e_imglink" type="LineEdit" parent="MainWindow"]
margin_left = 288.0
margin_top = 104.0
margin_right = 488.0
margin_bottom = 128.0

[node name="e_alttext" type="LineEdit" parent="MainWindow"]
margin_left = 288.0
margin_top = 168.0
margin_right = 488.0
margin_bottom = 192.0

[node name="e_messagetext" type="LineEdit" parent="MainWindow"]
margin_left = 24.0
margin_top = 168.0
margin_right = 224.0
margin_bottom = 192.0

[node name="e_btnlabel" type="LineEdit" parent="MainWindow"]
margin_left = 24.0
margin_top = 232.0
margin_right = 224.0
margin_bottom = 256.0

[node name="e_genlink" type="LineEdit" parent="MainWindow"]
margin_left = 24.0
margin_top = 312.0
margin_right = 488.0
margin_bottom = 336.0
editable = false

[node name="b_generate" type="Button" parent="MainWindow"]
margin_left = 32.0
margin_top = 360.0
margin_right = 128.0
margin_bottom = 380.0
theme = SubResource( 5 )
text = "Generate"

[node name="b_clear" type="Button" parent="MainWindow"]
margin_left = 408.0
margin_top = 360.0
margin_right = 480.0
margin_bottom = 380.0
text = "Clear"

[node name="b_copy" type="Button" parent="MainWindow"]
margin_left = 184.0
margin_top = 360.0
margin_right = 352.0
margin_bottom = 380.0
text = "Copy Link to Clipboard"

[node name="FlagR" type="Sprite" parent="MainWindow"]
position = Vector2( 448, 36 )
texture = ExtResource( 2 )
hframes = 60

[node name="FlagL" type="Sprite" parent="MainWindow"]
position = Vector2( 64, 36 )
texture = ExtResource( 2 )
hframes = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainWindow"]
autoplay = "speen"
anims/RESET = SubResource( 3 )
anims/speen = SubResource( 4 )

[connection signal="pressed" from="MainWindow/b_generate" to="MainWindow" method="_on_b_generate_pressed"]
[connection signal="pressed" from="MainWindow/b_clear" to="MainWindow" method="_on_b_clear_pressed"]
[connection signal="pressed" from="MainWindow/b_copy" to="MainWindow" method="_on_b_copy_pressed"]
